--- a/index.html
+++ b/index.html
@@ -11,46 +11,53 @@
       </head>
     <body>
 
+
+      <div class="father">
+
         <div class="page1">
 
           <!-- Right Section -->
-            <section class="section1 sectionbox">
-              <div class="section1_1">
+            <section class="section1">
                 <h1 class="name">Kirtan Kushwah</h1>
                 <img class="profileimg" src="Images/Profile.png" alt="Profile Image">
                 <br><br>
                 <p><strong>E-Mail : </strong> kirtankushwah03@gmail.com</p>
                 <p><strong>Address : </strong> Aasra Heights Apartment, Bhopal</p>
-              </div>
             </section>
 
           <!-- Left Section -->
-            <section class="section2 sectionbox">
-
-              <div class="blanksocials">
+            <section class="section2">
                 <h1 class="head">You here, again ?</h1>
-                <h1 class="connect">Let's connect and meet over a coffee</h1>
+                <h2 class="connect">Let's connect and meet over a coffee</h2>
                 <div class="iconsbox">
-                  <div class="icons">
-                    <a href="https://www.linkedin.com/in/tkirtan/" target="_blank"><img class="icons1" src="Images/Logos/linkedin.png" alt=""></a>
-                    <a href="https://twitter.com/T_kirtan_" target="_blank"><img class="icons2" src="Images/Logos/twitter.png" alt=""></a>
-                    <a href="https://github.com/TKirtan" target="_blank"><img class="icons3" src="Images/Logos/github.png" alt=""></a>
+                  <div class="iconsrow">
+                    <a href="https://www.linkedin.com/in/tkirtan/" target="_blank"><img class="icons" src="Images/Logos/linkedin.png" alt=""></a>
+                    <a href="https://twitter.com/T_kirtan_" target="_blank"><img class="icons" src="Images/Logos/twitter.png" alt=""></a>
+                    <a href="https://github.com/TKirtan" target="_blank"><img class="icons" src="Images/Logos/github.png" alt=""></a>
                   </div>
                 </div>
-              </div>
 
               <ul>
-                <!-- <h1 class="biohead">BIO</h1>
-                  <li><strong><h2>SUMMARY</h2></strong></li> -->
-                <p class="bio">ㅤㅤㅤㅤㅤㅤㅤI am a quick learner and comfortable in adapting new technologies and environment, I am a tech geek and passionate about technologies and programing.
+                <p class="bio">ㅤㅤㅤㅤㅤㅤㅤI am a quick learner and comfortable in adapting new technologies and environment, a tech geek who is passionate about technologies and programming.
                     I do program in JAVA and my work follows DevOps Culture. I am an Open-Source enthusiast and I follow agile practices in software development.
                     I am an tech geek currently working on Cloud Computing and DevOps.
                     I believe DevOps is not just about Tools and platforms but also about Culture. I strongly believe in the ethics and communitcation systems in organisation which makes me more curious to know about organisation's working and project's demand.
                 <br><br>Also throughout my career I have been in many tech communities where I have grown my connections amnong developers, HRs and tech enthusiasts. Over the time, I have experienced that projects enchances as much as it get reviewd and new ideas are added to it. This has intrigued me more towards Open-Source.</p>
               </ul>
-
             </section>
         </div>
+
+        <div class="navigation">
+          <nav>
+            <ul class="navi">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Blogs</a></li>
+              <li><a href="#">Tk Env</a></li>
+              <li><a href="#">More</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 
 <hr>
         <!-- Page 2 -->
@@ -119,7 +126,10 @@
 <hr>
         <!-- Page 3 -->
 
-        <section class="page page3">
+        <section class="page">
+          <div class="page3">
+
+          </div>
           <h1 class="heading1">PROJECTS</h1>
 <br>
           <ul>
