--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
           <!-- Right Section -->
             <section class="section1">
                 <h1 class="name">Kirtan Kushwah</h1>
+<br>
                 <img class="profileimg" src="Images/Profile.png" alt="Profile Image">
-                <br><br>
-                <p><strong>E-Mail : </strong> kirtankushwah03@gmail.com</p>
-                <p><strong>Address : </strong> Aasra Heights Apartment, Bhopal</p>
+<br><br>
+                <p><strong>E-Mail : </strong> kirtankushwah03@gmail.com <br>
+                <strong>Address : </strong> Aasra Heights Apartment, Bhopal</p>
             </section>
 
           <!-- Left Section -->
