Completed with 3 Sections

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <!-- Right Section -->
             <section class="section1">
                 <h1 class="name">Kirtan Kushwah</h1>
-<br>
+                <br>
                 <img class="profileimg" src="Images/Profile.png" alt="Profile Image">
-<br><br>
+                <br><br>
                 <p><strong>E-Mail : </strong> kirtankushwah03@gmail.com <br>
                 <strong>Address : </strong> Aasra Heights Apartment, Bhopal</p>
             </section>
@@ -66,9 +66,9 @@
         <section class="page">
           <div class="page2">
 
-            <div class="boxleft">
+            <div class="page2sect1">
               <h1 class="heading1">EXPERIENCE</h1>
-<br>
+              <br>
                 <ul>
                   <div>
                     <li><strong><h2>DevOps Engineer</h2></strong></li>
@@ -76,50 +76,47 @@
                       <h4 class="heads">ㅤㅤㅤBlue Planet Info Solution Pvt. Ltd.</h4>
                       <p class="duration">Nov. 2022 - Present</p>
                     </div>
-<br>
-                      <ul class="section_details">
-                        <li>Currently Training Interns for adopting DevOps Culture and Agile Methodologies</li>
-                        <li>Took sessions to explain procedures/methods, tools and cloud platforms (Amazon Web Services, MS Azure and Google Cloud Platform)</li>
-                        <li>Documented many procedures and methods used in DevOps transformations</li>
-                        <li>Working on the project for Cloud Migrations</li>
-                      </ul>
-                    </p>
+                    <br>
+                    <ul class="section_details">
+                      <li>Currently Training Interns for adopting DevOps Culture and Agile Methodologies</li>
+                      <li>Took sessions to explain procedures/methods, tools and cloud platforms (Amazon Web Services, MS Azure and Google Cloud Platform)</li>
+                      <li>Documented many procedures and methods used in DevOps transformations</li>
+                      <li>Working on the project for Cloud Migrations</li>
+                    </ul>
                   </div>
-<br><br>
+                  <br><br>
                   <div>
                     <li><strong><h2>Community Outreach Manager</h2></strong></li>
                     <div class="cd">
                       <h4 class="heads">ㅤㅤㅤDEVs Dungeon</h4>
                       <p class="duration">Feb. 2022 - Present</p>
                     </div>
-<br>
-                      <ul class="section_details">
-                        <li>Settled Up mailing system for reaching targeted audience with audience base for more than 2000 (still increasing)</li>
-                        <li>Organized webinars and Interactive sessions with experts</li>
-                        <li>Ensured audience engagement for community</li>
-                        <li>Solved software and hardware related issue for members</li>
-                      </ul>
-                    </p>
+                    <br>
+                    <ul class="section_details">
+                      <li>Settled Up mailing system for reaching targeted audience with audience base for more than 2000 (still increasing)</li>
+                      <li>Organized webinars and Interactive sessions with experts</li>
+                      <li>Ensured audience engagement for community</li>
+                      <li>Solved software and hardware related issue for members</li>
+                    </ul>
                   </div>
-<br><br>
+                  <br><br>
                   <div>
                     <li><strong><h2>Campus Ambassador</h2></strong></li>
                     <div class="cd">
                       <h4 class="heads">ㅤㅤㅤTeam Shunya, IIT Bombay</h4>
                       <p class="duration">Feb. 2022 - Present</p>
                     </div>
-<br>
-                      <ul class="section_details">
-                        <li>Worked with the team to spread awareness regarding sustainable development and importance of building sustainable infrastructures</li>
-                        <li>Learned about general infrastructure development from planning, checking, implementation to maintance</li>
-                        <li>Supported social media campaign runned by the central authority of Team Shunya and ensured maxium reach from personal network.</li>
-                        <li>Recieved task completion and appreciation certificate at end of the Internship. <a style="text-decoration: none" href="https://drive.google.com/drive/folders/15EIQdoauHWQpNNgzdtJL2QqhA83HDOR2?usp=share_link">Credentials here</a></li>
-                      </ul>
-                    </p>
+                    <br>
+                    <ul class="section_details">
+                      <li>Worked with the team to spread awareness regarding sustainable development and importance of building sustainable infrastructures</li>
+                      <li>Learned about general infrastructure development from planning, checking, implementation to maintance</li>
+                      <li>Supported social media campaign runned by the central authority of Team Shunya and ensured maxium reach from personal network.</li>
+                      <li>Recieved task completion and appreciation certificate at end of the Internship. <a style="text-decoration: none" href="https://drive.google.com/drive/folders/15EIQdoauHWQpNNgzdtJL2QqhA83HDOR2?usp=share_link">Credentials here</a></li>
+                    </ul>
                   </div>
                 </ul>
             </div>
-            <img class="page2graphics" src="Images/Graphics/Page2Graphic.png" alt="">
+            <img class="page2img" src="Images/Graphics/Page2Graphic.png" alt="">
           </div>
 
         </section>
@@ -127,44 +124,49 @@
 <hr>
         <!-- Page 3 -->
 
-        <section class="page">
-          <div class="page3">
+        <section class="page page3">
+          <div class="page2">
 
+            <img class="page2img" src="Images/Graphics/Page3Graphic.png" alt="">
+
+            <div class="page2sec1">
+              <h1 class="heading1">PROJECTS</h1>
+              <br>
+              <ul>
+                <div>
+                  <li><strong><h2>Mirror-Bot</h2></strong></li>
+
+                  <p>ㅤThis is Mirror-Bot which can save files from Direct URL, YT-DL Links, Torrent Files, Magnet Links and Telegram Files to Google Drive.
+                  <br><br>
+                    <h4 class="heads">Project Details</h4>
+                    <br>
+                    <ul class="section_details">
+                      <li>Mirror-Bot downloads file from the source to server which is deployed over AWS EC2 Instance (Configuration : RHEL Machine with 30GB Storage, t2.micro), the files are then processed as per command i.e. Zipping, Unzipping etc. Further it uploads the resulted files to Google Drive by using Google Drive API and IAM Service (Service Accounts for getting over daily upload limit of Google Drive from 720GB per day to 75TB per day)</li>
+                      <li>Code is taken from a open-source repository and deployed using Docker over VPS</li>
+                      <li>Technologies and APIs used in the project are Containerization (Docker), Linux (OS, RHEL), AWS (Cloud Provider for VPS), GCP (For Authentication, IAM Service and Google Drive Services), Cloudflare (Workers for projecting drive files to open web, also for streaming media content), Telegram's Application Development API (User Interface), Git (Version Control System)</li>
+                      <li>Further updates am working on are adding a CI/CD Pipeline using Jenkins, Creating a Load Balancer for the Bot on AWS and Creating an monitoring and log saver to present data in graphical form</li>
+                    </ul>
+                  </p>
+                </div>
+                <br>
+                <div>
+                  <li><strong><h2>Worker Deployment</h2></strong></li>
+
+                  <p>ㅤThis is an website which can stream files from google drive with an user accounts system with multiple permission levels.
+                  <br><br>
+                  <h4 class="heads">Project Details</h4>
+                  <br>
+                    <ul class="section_details">
+                      <li>It is deployment of G-Index-V4 which is a complete worker website Integrated with Google Drive for presenting and streaming files on worker site</li>
+                      <li>It also consisted of user account system, settled up by OTP and create account system using SMTP</li>
+                      <li>Technologies and APIs used in the project are Containerization (Docker), MangoDB for Database, Linux (OS, RHEL), AWS (Cloud Provider for VPS), GCP (For Authentication, IAM Service and Google Drive Services), Cloudflare (Workers for projecting drive files to open web, also for streaming media content), Git (Version Control System), TMDB API</li>
+                    </ul>
+                  </p>
+                </div>
+              </ul>
+            </div>
           </div>
-          <h1 class="heading1">PROJECTS</h1>
-<br>
-          <ul>
-            <div>
-              <li><strong><h2>Mirror-Bot</h2></strong></li>
 
-              <p>ㅤThis is Mirror-Bot which can save files from Direct URL, YT-DL Links, Torrent Files, Magnet Links and Telegram Files to Google Drive.
-<br><br>
-                <h4 class="heads">Project Details</h4>
-<br>
-                <ul class="section_details">
-                  <li>Mirror-Bot downloads file from the source to server which is deployed over AWS EC2 Instance (Configuration : RHEL Machine with 30GB Storage, t2.micro), the files are then processed as per command i.e. Zipping, Unzipping etc. Further it uploads the resulted files to Google Drive by using Google Drive API and IAM Service (Service Accounts for getting over daily upload limit of Google Drive from 720GB per day to 75TB per day)</li>
-                  <li>Code is taken from a open-source repository and deployed using Docker over VPS</li>
-                  <li>Technologies and APIs used in the project are Containerization (Docker), Linux (OS, RHEL), AWS (Cloud Provider for VPS), GCP (For Authentication, IAM Service and Google Drive Services), Cloudflare (Workers for projecting drive files to open web, also for streaming media content), Telegram's Application Development API (User Interface), Git (Version Control System)</li>
-                  <li>Further updates am working on are adding a CI/CD Pipeline using Jenkins, Creating a Load Balancer for the Bot on AWS and Creating an monitoring and log saver to present data in graphical form</li>
-                </ul>
-              </p>
-            </div>
-<br>
-            <div>
-              <li><strong><h2>Worker Deployment</h2></strong></li>
-
-              <p>ㅤThis is an website which can stream files from google drive with an user accounts system with multiple permission levels.
-<br><br>
-              <h4 class="heads">Project Details</h4>
-<br>
-                <ul class="section_details">
-                  <li>It is deployment of G-Index-V4 which is a complete worker website Integrated with Google Drive for presenting and streaming files on worker site</li>
-                  <li>It also consisted of user account system, settled up by OTP and create account system using SMTP</li>
-                  <li>Technologies and APIs used in the project are Containerization (Docker), MangoDB for Database, Linux (OS, RHEL), AWS (Cloud Provider for VPS), GCP (For Authentication, IAM Service and Google Drive Services), Cloudflare (Workers for projecting drive files to open web, also for streaming media content), Git (Version Control System), TMDB API</li>
-                </ul>
-              </p>
-            </div>
-          </ul>
         </section>
 
 
