--- a/index.html
+++ b/index.html
@@ -169,6 +169,65 @@
 
         </section>
 
+<hr>
+
+<section class="page">
+  <div class="page2">
+
+    <div class="page2sect1">
+      <h1 class="heading1">EDUCATION</h1>
+      <br>
+        <ul>
+          <div>
+            <li><strong><h2>Bachelor of Technology</h2></strong></li>
+            <div class="cd">
+              <h4 class="heads">ㅤLakshmi Narain College of Technology</h4>
+              <p class="duration">Batch of 2025</p>
+            </div>
+            <br>
+            <ul class="section_details">
+              <li>Currently Training Interns for adopting DevOps Culture and Agile Methodologies</li>
+              <li>Took sessions to explain procedures/methods, tools and cloud platforms (Amazon Web Services, MS Azure and Google Cloud Platform)</li>
+              <li>Documented many procedures and methods used in DevOps transformations</li>
+              <li>Working on the project for Cloud Migrations</li>
+            </ul>
+          </div>
+          <br><br>
+          <div>
+            <li><strong><h2>Higher Secondary</h2></strong></li>
+            <div class="cd">
+              <h4 class="heads">ㅤParamount Academy</h4>
+              <p class="duration">Apr. 2017 - Sept. 2019</p>
+            </div>
+            <br>
+            <ul class="section_details">
+              <li>Settled Up mailing system for reaching targeted audience with audience base for more than 2000 (still increasing)</li>
+              <li>Organized webinars and Interactive sessions with experts</li>
+              <li>Ensured audience engagement for community</li>
+              <li>Solved software and hardware related issue for members</li>
+            </ul>
+          </div>
+          <br><br>
+          <div>
+            <li><strong><h2>Secondary</h2></strong></li>
+            <div class="cd">
+              <h4 class="heads">ㅤShri Gurukul Academy</h4>
+              <p class="duration">Apr. 2015 - Mar. 2017</p>
+            </div>
+            <br>
+            <ul class="section_details">
+              <li>Worked with the team to spread awareness regarding sustainable development and importance of building sustainable infrastructures</li>
+              <li>Learned about general infrastructure development from planning, checking, implementation to maintance</li>
+              <li>Supported social media campaign runned by the central authority of Team Shunya and ensured maxium reach from personal network.</li>
+              <li>Recieved task completion and appreciation certificate at end of the Internship. <a style="text-decoration: none" href="https://drive.google.com/drive/folders/15EIQdoauHWQpNNgzdtJL2QqhA83HDOR2?usp=share_link">Credentials here</a></li>
+            </ul>
+          </div>
+        </ul>
+    </div>
+    <img class="page2img" src="Images/Graphics/Page4Graphic.png" alt="">
+  </div>
+
+</section>
 
 
     </body>
