Added Marks to education

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 </div>
 
               <ul>
-                <p class="bio">ㅤㅤㅤㅤㅤㅤㅤI am a quick learner and comfortable in adapting new technologies and environment, a tech geek who is passionate about technologies and programming.
-                    I do program in JAVA and my work follows DevOps Culture. I am an Open-Source enthusiast and I follow agile practices in software development.
-                    I am an tech geek currently working on Cloud Computing and DevOps.
-                    I believe DevOps is not just about Tools and platforms but also about Culture. I strongly believe in the ethics and communitcation systems in organisation which makes me more curious to know about organisation's working and project's demand.
-                <br><br>Also throughout my career I have been in many tech communities where I have grown my connections amnong developers, HRs and tech enthusiasts. Over the time, I have experienced that projects enchances as much as it get reviewd and new ideas are added to it. This has intrigued me more towards Open-Source.</p>
+                <p class="bio">ㅤㅤㅤㅤㅤㅤI am an avid learner and comfortable in adapting new technologies , am also a tech geek who is passionate about technologies and programming.
+                I am a JAVA programmer and my work follows DevOps Culture.I am also an Open-Source enthusiast and ensue agile practices in software development.
+                I am currently working on Cloud Computing and DevOps.<br><br>
+                    Also throughout my experience till date , I have been in many tech communities where I have grown connections amnong developers, HRs and tech enthusiasts. Over the time, I have experienced that projects augments,as much as it gets reviewed and when new ideas are eventually implemented on it, this has intrigued me more towards Open-Source.
+                <br><br>  </p>
               </ul>
             </section>
         </div>
@@ -179,27 +179,37 @@
       <br>
         <ul>
           <div>
-            <li><strong><h2>Bachelor of Technology</h2></strong></li>
+            <div class="cd">
+              <li><strong><h2>Bachelor of Technology</h2></strong></li>
+              <li class="duration" style="padding-top: 2%;">CGPA 7.71</li>
+            </div>
+
             <div class="cd">
               <h4 class="heads">ㅤLakshmi Narain College of Technology</h4>
               <p class="duration">Batch of 2025</p>
             </div>
-            <br>
             <ul class="section_details"></ul>
           </div>
-          <br><br>
+          <br>
           <div>
-            <li><strong><h2>Higher Secondary</h2></strong></li>
+            <div class="cd">
+              <li><strong><h2>Higher Secondary</h2></strong></li>
+              <li class="duration" style="padding-top: 2%">62.2 %</li>
+            </div>
+
             <div class="cd">
               <h4 class="heads">ㅤParamount Academy</h4>
               <p class="duration">Apr. 2017 - Sept. 2019</p>
             </div>
-            <br>
             <ul class="section_details"></ul>
           </div>
-          <br><br>
+          <br>
           <div>
-            <li><strong><h2>Secondary</h2></strong></li>
+            <div class="cd">
+              <li class="heads"><strong><h2>Secondary</h2></strong></li>
+              <li class="duration" style="padding-top: 2%">89.8 %</li>
+            </div>
+
             <div class="cd">
               <h4 class="heads">ㅤShri Gurukul Academy</h4>
               <p class="duration">Apr. 2015 - Mar. 2017</p>
