Completed with Education

--- a/index.html
+++ b/index.html
@@ -219,9 +219,18 @@
             </ul>
           </div>
         </ul>
+
+        <div class="page2sec1">
+            <img src="Images/Graphics/Page4Graphic2.png" style="width:50%; margin-left: 20%;" alt="">
+        </div>
     </div>
     <img class="page2img" src="Images/Graphics/Page4Graphic.png" alt="">
   </div>
+</section>
+
+<hr>
+
+<section class="page">
 
 </section>
 
