--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section class="section1">
                 <h1 class="name">Kirtan Kushwah</h1>
                 <br>
-                <img class="profileimg" src="Images/Profile.png" alt="Profile Image">
+                <img class="profileimg" src="Images/Profile.jpeg" alt="Profile Image">
                 <br><br>
                 <p><strong>E-Mail : </strong> kirtankushwah03@gmail.com <br>
                 <strong>Address : </strong> Aasra Heights Apartment, Bhopal</p>
