--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Kirtan's Portfolio</title>
 
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="Images/Profile.ico">
     <!-- Fonts -->
@@ -18,7 +19,8 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -72,7 +74,7 @@
                     <div class="companies">
                         <h4>ㅤㅤㅤBlue Planet Info Solution Pvt. Ltd.</h4>
                         <p>Nov. 2022 - May 2022</p>
-                    </div>  
+                    </div>
                     <ul>
                         <li>Currently Training Interns for adopting DevOps Culture and Agile Methodologies</li>
                         <li>Took sessions to explain procedures/methods, tools and cloud platforms (Amazon Web
@@ -131,7 +133,7 @@
         <div class="col-lg-4">
             <img style="width: 100%;" src="Images/Graphics/Page4Graphic2.png" alt="">
         </div>
-        
+
         <div class="col-lg-8 col-md-12 col-sm-12">
             <h1>PROJECTS</h1>
             <ul>
@@ -139,7 +141,7 @@
                     <li><strong>
                             <h2>Mirror-Bot</h2>
                         </strong></li>
-        
+
                     <p>ㅤThis is Mirror-Bot which can save files from Direct URL, YT-DL Links, Torrent Files, Magnet
                         Links and Telegram Files to Google Drive.
                         <br><br>
@@ -192,17 +194,41 @@
             <h1>EDUCATION</h1>
             <br>
             <ul>
-                <li style="display: flex; justify-content: space-between; align-items: center;"><span><h2>Bachelor of Technology</h2></span><span><h5><i>Batch of 2025</i></h5></span></li>
+                <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                        <h2>Bachelor of Technology</h2>
+                    </span><span>
+                        <h5><i>Batch of 2025</i></h5>
+                    </span></li>
                 <ul>
-                    <li style="display: flex; justify-content: space-between; align-items: center;"><span><h4>Lakshmi Narain College of Technology</h4></span><span><h5><i>CGPA 7.3</i></h5></span></li>
+                    <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                            <h4>Lakshmi Narain College of Technology</h4>
+                        </span><span>
+                            <h5><i>CGPA 7.3</i></h5>
+                        </span></li>
                 </ul>
-                <li style="display: flex; justify-content: space-between; align-items: center;"><span><h2>Higher Secondary</h2></span><span><h5><i>Batch of 2021</i></h5></span></li>
+                <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                        <h2>Higher Secondary</h2>
+                    </span><span>
+                        <h5><i>Batch of 2021</i></h5>
+                    </span></li>
                 <ul>
-                    <li style="display: flex; justify-content: space-between; align-items: center;"><span><h4>Paramount Academy</h4></span><span><h5><i>62.2 %</i></h5></span></li>
+                    <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                            <h4>Paramount Academy</h4>
+                        </span><span>
+                            <h5><i>62.2 %</i></h5>
+                        </span></li>
                 </ul>
-                <li style="display: flex; justify-content: space-between; align-items: center;"><span><h2>Secondary</h2></span><span><h5><i>Batch of 2019</i></h5></span></li>
+                <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                        <h2>Secondary</h2>
+                    </span><span>
+                        <h5><i>Batch of 2019</i></h5>
+                    </span></li>
                 <ul>
-                    <li style="display: flex; justify-content: space-between; align-items: center;"><span><h4>Shree Gurukul School</h4></span><span><h5><i>89.9 %</i></h5></span></li>
+                    <li style="display: flex; justify-content: space-between; align-items: center;"><span>
+                            <h4>Shree Gurukul School</h4>
+                        </span><span>
+                            <h5><i>89.9 %</i></h5>
+                        </span></li>
                 </ul>
             </ul>
         </div>
@@ -210,6 +236,7 @@
             <img src="Images/Graphics/Page4Graphic2.png" style="width:100%;" alt="">
         </div>
     </div>
+
 </body>
 
 </html>
